terminal: Adjust page to max size & fix scrollbar

--- a/pkg/systemd/terminal.css
+++ b/pkg/systemd/terminal.css
@@ -4,15 +4,32 @@ html, body {
 
 .console-ct-container {
     height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr;
+    overflow: hidden;
+}
+
+.console-ct-container .panel-body,
+.console-ct-container .console-ct {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.xterm-accessibility {
+    /* Allow for scrollbar clicking */
+    /* (scrollbars are 18px or less across common OSes) */
+    right: 18px !important;
 }
 
 .console-ct-container .panel-body {
     padding: 0;
-    position: fixed;
-    top: 44px; /* panel-heading in cockpit.css */
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
+    position: relative;
+}
+
+.console-ct-container .console-ct {
+    position: absolute;
 }
 
 .black-theme {
